Use env variables to build static path

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,11 @@ BYPASS_OTP_VERIFICATION=false
 # Note: This is configurable via environment variable, not UI
 DEFAULT_VERIFICATION_METHOD=email
 
+# Hosting Environment Configuration (for SSL certificate path resolution)
+# Set these for Hostinger hosting environment
+# HOSTINGER_USER_ID=u123456789
+# DOMAIN=yourdomain.com
+
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
