--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,8 +8,21 @@ DB_PASSWORD=your_password_here
 JWT_SECRET=your-jwt-secret-change-in-production
 APP_ENV=production
 
+# Payment Configuration
+# Feature flags for payment methods
+RAZORPAY_ENABLED=false
+UPI_ENABLED=true
+DEFAULT_PAYMENT_METHOD=upi
+
+# Razorpay Configuration (when enabled)
 RAZORPAY_KEY_ID=your_razorpay_key_id
 RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+
+# UPI Configuration (when enabled)
+UPI_VIRTUAL_ADDRESS=athiratravelsekm-2@okaxis
+UPI_MERCHANT_NAME=GAMCA Cochin Medical Services
+UPI_MERCHANT_CODE=7372
+UPI_TRANSACTION_NOTE=GAMCA Medical Appointment Payment
 
 FRONTEND_URL=https://yourdomain.com
 
