UPI_VIRTUAL_ADDRESS from secrets

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -37,7 +37,7 @@ env:
   RAZORPAY_ENABLED: ${{ vars.RAZORPAY_ENABLED }}
   UPI_ENABLED: ${{ vars.UPI_ENABLED }}
   DEFAULT_PAYMENT_METHOD: ${{ vars.DEFAULT_PAYMENT_METHOD }}
-  UPI_VIRTUAL_ADDRESS: ${{ vars.UPI_VIRTUAL_ADDRESS }}
+  UPI_VIRTUAL_ADDRESS: ${{ secrets.UPI_VIRTUAL_ADDRESS }}
   UPI_MERCHANT_NAME: ${{ vars.UPI_MERCHANT_NAME }}
   UPI_MERCHANT_CODE: ${{ vars.UPI_MERCHANT_CODE }}
   UPI_TRANSACTION_NOTE: ${{ vars.UPI_TRANSACTION_NOTE }}
