CRITICAL: Add immediate UPI fix to deployment scripts
- Add emergency UPI constraint fix to production deployment workflow
- Include IMMEDIATE_UPI_FIX.sql in migration process
- Ensure UPI payment constraint violation is fixed on deployment
- Multiple fallback mechanisms for critical fix application

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -370,11 +370,30 @@ jobs:
                     "${{ env.DB_NAME }}" < backend/database/migrate_appointments_table.sql
               echo "Appointments table migration completed"
             fi
-             if [ -f "backend/database/migrate_upi_support.sql" ]; then
-               echo "Running UPI support migration..."
+            if [ -f "backend/database/migrate_upi_support.sql" ]; then
+              echo "Running UPI support migration..."
+              mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                    "${{ env.DB_NAME }}" < backend/database/migrate_upi_support.sql
+              echo "UPI support migration completed"
+             fi
+             if [ -f "backend/database/migrate_payment_tracking.sql" ]; then
+               echo "Running payment tracking migration..."
                mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                     "${{ env.DB_NAME }}" < backend/database/migrate_upi_support.sql
-               echo "UPI support migration completed"
+                     "${{ env.DB_NAME }}" < backend/database/migrate_payment_tracking.sql
+               echo "Payment tracking migration completed"
+             fi
+             if [ -f "backend/database/migrate_fix_upi_constraint.sql" ]; then
+               echo "Running CRITICAL UPI constraint fix migration..."
+               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                     "${{ env.DB_NAME }}" < backend/database/migrate_fix_upi_constraint.sql
+               echo "CRITICAL UPI constraint fix migration completed"
+             fi
+             # Apply immediate emergency UPI fix if it exists
+             if [ -f "IMMEDIATE_UPI_FIX.sql" ]; then
+               echo "Running EMERGENCY UPI constraint fix..."
+               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                     "${{ env.DB_NAME }}" < IMMEDIATE_UPI_FIX.sql
+               echo "EMERGENCY UPI constraint fix completed"
              fi
              if [ -f "backend/database/migrate_payment_tracking.sql" ]; then
                echo "Running payment tracking migration..."
