--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -388,39 +388,15 @@ jobs:
                      "${{ env.DB_NAME }}" < backend/database/migrate_fix_upi_constraint.sql
                echo "CRITICAL UPI constraint fix migration completed"
              fi
-             # Apply immediate emergency UPI fix if it exists
-             if [ -f "IMMEDIATE_UPI_FIX.sql" ]; then
-               echo "Running EMERGENCY UPI constraint fix..."
-               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                     "${{ env.DB_NAME }}" < IMMEDIATE_UPI_FIX.sql
-               echo "EMERGENCY UPI constraint fix completed"
-             fi
-             if [ -f "backend/database/migrate_payment_tracking.sql" ]; then
-               echo "Running payment tracking migration..."
-               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                     "${{ env.DB_NAME }}" < backend/database/migrate_payment_tracking.sql
-               echo "Payment tracking migration completed"
-             fi
-             if [ -f "backend/database/migrate_fix_upi_constraint.sql" ]; then
-               echo "Running UPI constraint fix migration..."
-               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                     "${{ env.DB_NAME }}" < backend/database/migrate_fix_upi_constraint.sql
-               echo "UPI constraint fix migration completed"
-             fi
-             if [ -f "backend/database/migrate_payment_tracking.sql" ]; then
-               echo "Running payment tracking migration..."
-               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                     "${{ env.DB_NAME }}" < backend/database/migrate_payment_tracking.sql
-               echo "Payment tracking migration completed"
-             fi
-             if [ -f "backend/database/migrate_fix_upi_constraint.sql" ]; then
-               echo "Running UPI constraint fix migration..."
-               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                     "${{ env.DB_NAME }}" < backend/database/migrate_fix_upi_constraint.sql
-               echo "UPI constraint fix migration completed"
-             fi
-             
-             # Fix orphaned payment records after migrations
+               # Apply immediate emergency UPI fix if it exists
+               if [ -f "backend/database/IMMEDIATE_UPI_FIX.sql" ]; then
+                 echo "Running EMERGENCY UPI constraint fix..."
+                 mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                       "${{ env.DB_NAME }}" < backend/database/IMMEDIATE_UPI_FIX.sql
+                 echo "EMERGENCY UPI constraint fix completed"
+               fi
+              
+              # Fix orphaned payment records after migrations
              echo "Running orphaned payment fix script..."
              DEV_URL="${{ env.FRONTEND_URL }}"
              if [[ "$DEV_URL" == *"/dev"* ]]; then
@@ -789,14 +765,27 @@ jobs:
                     "${{ env.DB_NAME }}" < backend/database/migrate_appointments_table.sql
               echo "Appointments table migration completed"
            fi
-           if [ -f "backend/database/migrate_upi_support.sql" ]; then
-             echo "Running UPI support migration..."
-             mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
-                   "${{ env.DB_NAME }}" < backend/database/migrate_upi_support.sql
-             echo "UPI support migration completed"
-            fi
-             
-             # Fix orphaned payment records after migrations
+            if [ -f "backend/database/migrate_upi_support.sql" ]; then
+              echo "Running UPI support migration..."
+              mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                    "${{ env.DB_NAME }}" < backend/database/migrate_upi_support.sql
+              echo "UPI support migration completed"
+             fi
+             if [ -f "backend/database/migrate_fix_upi_constraint.sql" ]; then
+               echo "Running CRITICAL UPI constraint fix migration..."
+               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                     "${{ env.DB_NAME }}" < backend/database/migrate_fix_upi_constraint.sql
+               echo "CRITICAL UPI constraint fix migration completed"
+             fi
+             # Apply immediate emergency UPI fix if it exists
+             if [ -f "backend/database/IMMEDIATE_UPI_FIX.sql" ]; then
+               echo "Running EMERGENCY UPI constraint fix..."
+               mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                     "${{ env.DB_NAME }}" < backend/database/IMMEDIATE_UPI_FIX.sql
+               echo "EMERGENCY UPI constraint fix completed"
+             fi
+              
+              # Fix orphaned payment records after migrations
              echo "Running orphaned payment fix script..."
              ORPHAN_FIX_RESPONSE=$(curl -s "${{ env.FRONTEND_URL }}/fix-orphaned-payments.php?live=1" 2>&1 || echo "curl_failed")
              
